Building counter with vanilla js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./public/style.css">
     <title>Title</title>
 </head>
 <body>
 
+    <div>
+        <h4>The current count is ...</h4>
+        <h1 id="count">0</h1>
+        <button id="subtract">-</button>
+        <button id="add">+</button>
+    </div>
+
+<script src="./public/index.js"></script>
 </body>
 </html>
